refactor: reorganize package structure and replace field injection with constructor injection